# TestRig

./: .gitignore  CMakeLists.txt  README.md  program.dmc  pyUploadProgram.py
src/: galilcontroller.cpp  galilcontroller.h  mainwindow.cpp  mainwindow.h
src/ui/: mainwindow.ui
